FIX DEI METODI OBSOLETI / NUOVI